# split-brain-harness

./: ARCHITECTURE.md  CHANGELOG.md  CLAUDE_CODE_PROMPT.md  Cargo.toml  EPHEMERAL_TOOL_FORGE_DESIGN.md  LICENSE  Modelfile.split-brain  README.md  SLIDES.html  SLIDES.md  TECHNICAL_BRIEF.md  TRANSFORMER_RAG_PLAN.md  config.toml.example  forge_battery_results.jsonl  soul.md
.github/workflows/: ci.yml  release.yml
context/: default.toml
crates/sbh-core/: Cargo.toml
crates/sbh-core/src/: capability.rs  extractor.rs  input_validation.rs  lib.rs  types.rs
crates/sbh-forge/: Cargo.toml
crates/sbh-forge/src/: code_gen.rs  generative_forge.rs  lib.rs  regenerative_forge.rs  reputation.rs  tool_forge.rs  tool_memory.rs  wasm_forge.rs
crates/sbh-llm/: Cargo.toml
crates/sbh-llm/src/: lib.rs  ollama.rs  openai.rs
crates/sbh-normalize/: Cargo.toml
crates/sbh-safety/: Cargo.toml  soul.md
crates/sbh-safety/src/: lib.rs  policy.rs  soul.rs
crates/sbh-store/: Cargo.toml
crates/sbh-store/src/: audit.rs  calibration.rs  introspect.rs  lib.rs  session_log.rs
docs/: sbh-flow.html
examples/: norm_bench.rs
fixtures/: cyberec_prompt_injections.jsonl  cyberec_sample200.jsonl  cyberec_sbh_results.jsonl  deepset_prompt_injections.jsonl  deepset_sbh_results.jsonl  eval.json  llm_sec_eval_questions.jsonl  llm_sec_eval_sbh_results.jsonl  mt_bench_questions.jsonl  mt_bench_sbh_results.jsonl  mt_bench_sbh_results_v2.jsonl  trustai_jailbreaks.jsonl  trustai_sbh_results.jsonl
rules/: credential-egress.toml
scripts/: bench_claude_api.sh  curl_demo.sh  fetch_datasets.py  forge_battery.sh  run_all_benches.sh  run_bench_adversarial.py  run_bench_labeled.py  run_mt_bench.py
src/: adaptor.rs  advocate.rs  arbitrator.rs  calibration.rs  capability.rs  code_gen.rs  config.rs  context_packs.rs  extractor.rs  formal.rs  generative_forge.rs  harness.rs  lib.rs  main.rs  metered.rs  normalizer.rs  policy.rs  rag.rs  regenerative_forge.rs  reputation.rs  security.rs  serve.rs  session_log.rs  soul.rs  static_analysis.rs  tool_forge.rs  tool_memory.rs  tool_risk.rs  transformer.rs  types.rs  verifier.rs  visualize.rs  wasm_forge.rs
src/backends/: anthropic.rs  embedded.rs  mod.rs  ollama.rs  openai.rs
tests/: backends.rs  cli.rs  eval.rs  forge_pipeline.rs
