[package]
name = "split-brain-harness"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio       = { version = "1.38", features = ["full"] }
reqwest     = { version = "0.12", features = ["json"] }
serde       = { version = "1.0",  features = ["derive"] }
serde_json  = "1.0"
async-trait = "0.1"
anyhow      = "1.0"
toml        = { version = "0.8", default-features = false, features = ["parse"] }
ratatui     = "0.29"
crossterm   = "0.28"
axum        = { version = "0.7", features = ["json"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }

[[bin]]
name = "split-brain-harness"
path = "src/main.rs"

[[bin]]
name = "sbh-monitor"
path = "src/bin/monitor.rs"

[lib]
name = "split_brain_harness"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3"

[features]
live-tests = []
