[package]
name        = "sbh-forge"
version     = "0.1.0"
edition     = "2021"
description = "Ephemeral Tool Forge for the Split-Brain Harness: generate, statically analyze, sandbox (WASM/WASI), and reputation-gate LLM-produced Rust tools."
license     = "MIT"

[lib]
name = "sbh_forge"
path = "src/lib.rs"

[dependencies]
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow     = "1.0"
sbh-core   = { path = "../sbh-core" }
sbh-llm    = { path = "../sbh-llm" }
sbh-safety = { path = "../sbh-safety" }
sbh-store  = { path = "../sbh-store" }

[dev-dependencies]
tokio       = { version = "1.38", features = ["macros", "rt", "rt-multi-thread"] }
tempfile    = "3"
async-trait = "0.1"
