[package]
name        = "sbh-llm"
version     = "0.1.0"
edition     = "2021"
description = "LLM backend abstraction for the Split-Brain Harness: the InferenceEngine trait and its Ollama / OpenAI-compatible / Anthropic / embedded implementations."
license     = "MIT"

[lib]
name = "sbh_llm"
path = "src/lib.rs"

[dependencies]
reqwest     = { version = "0.12", features = ["json"] }
serde_json  = "1.0"
async-trait = "0.1"
sbh-core    = { path = "../sbh-core" }
