[package]
name        = "sbh-normalize"
version     = "0.1.0"
edition     = "2021"
description = "Stage 0 deobfuscation normalizer for the Split-Brain Harness (7-pass: bidi, fullwidth, backslash, base64, morse, homoglyph, leet)."
license     = "MIT"

[lib]
name = "sbh_normalize"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
